fix(layout): header z-index

--- a/css/layout.css
+++ b/css/layout.css
@@ -115,6 +115,7 @@ button:disabled {
 .main-header {
   padding: 1rem 0;
   position: sticky;
+  z-index: 3000;
   top: 0;
 }
 
